--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<h1>Welcome</h1><br>
 	<img src="https://image.shutterstock.com/image-vector/welcome-poster-spectrum-brush-strokes-260nw-1146069941.jpg" width="300" height="300">
 
-<a href="mine.html"><h1>Enter</h1 /a>
+<a href="Mine.html"><h1>Enter</h1 /a>
 
 
 </body>
