--- a/Mine.html
+++ b/Mine.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 		<title>Mine</title>
-		<link rel="stylesheet" type="text/css" href="mine.css">
+		<link rel="stylesheet" type="text/css" href="Mine.css">
 		<link rel="stylesheet" type="text/css" href="animate.css">
 		
 </head>
