--- a/Mine.html
+++ b/Mine.html
@@ -3,7 +3,7 @@
 <head>
 		<title>Mine</title>
 		<link rel="stylesheet" type="text/css" href="Mine.css">
-		<link rel="stylesheet" type="text/css" href="animate.css">
+		<link rel="stylesheet" type="text/css" href="Animate.css">
 		
 </head>
 <body>
