--- a/Mine2.html
+++ b/Mine2.html
@@ -8,7 +8,7 @@
 	 <body style="background-image:url(https://s1.1zoom.me/big0/336/375580-svetik.jpg); background-size: cover; ">
  	<h1>From this page you can search for any information you would like to know. Thankyou</h1>
 	<a href="https://giphy.com/gifs/7kn27lnYSAE9O/html5" target="https://giphy.com/gifs/7kn27lnYSAE9O/html5" ><h3>Are you sure you are 18+?</h3></a>
-		<a href="mine.html"><h2>Go back</h2/a>
+		<a href="Mine.html"><h2>Go back</h2/a>
 			<iframe src="https://www.wikipedia.org/" height="450" width="900" ></iframe>
 					</body>
 
